testdata/golden/sema/valid/array_range_index.sg
fn test() {
    let a = [1, 2, 3];
    let y = a[[1..2]];
}
