testdata/golden/sema/invalid/range_literal_bounds.sg
fn test() {
    let r = [..(1:uint)];
}
